--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "babel-loader": "^9.2.1",
     "clean-webpack-plugin": "^4.0.0",
     "copy-webpack-plugin": "^12.0.2",
+    "cross-env": "^7.0.3",
     "css-loader": "^7.1.2",
     "csv-loader": "^3.0.5",
-    "dotenv": "^16.4.5",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.6.0",
     "mini-css-extract-plugin": "^2.9.1",
@@ -30,8 +30,8 @@
   "version": "1.0.0",
   "main": "postcss.config.js",
   "scripts": {
-    "dev": "webpack serve",
-    "build": "webpack"
+    "dev": "cross-env MODE=dev webpack serve",
+    "build": "cross-env MODE=prod webpack"
   },
   "author": "",
   "license": "ISC",
@@ -39,7 +39,7 @@
   "browserslist": "> 0.25%, not dead",
   "dependencies": {
     "@babel/polyfill": "^7.12.1",
-    "lucide": "^0.447.0",
+    "lucide": "^0.453.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   }
